feat: add i18n currency

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,8 @@
 {
     "home": {
         "listen": "Listen to Great Music!"
+    },
+    "song": {
+        "comment_count": "No comment | 1 comment | {count} comments"
     }
 }
