--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -4,5 +4,9 @@
     },
     "song": {
         "comment_count": "No comment | 1 comment | {count} comments"
+    },
+    "register": {
+        "accept": "I accept Music's {0}",
+        "tos": "Terms of Service"
     }
 }
