feat: add PWA and optimization

--- a/src/locales/kz.json
+++ b/src/locales/kz.json
@@ -1,5 +1,8 @@
 {
     "home": {
         "listen": "Керемет музыка тыңдаңыз!"
+    },
+    "manage": {
+        "my_songs": "Менің әндерім"
     }
 }
